# stock-ai-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
my_agent/: agent.py  models.py  streamlit_ui.py
my_agent/pre_process/: scrape_investors_ai.py
my_agent/pre_process/data/: investors.json
src/: agent.py
